--- a/app/globals.css
+++ b/app/globals.css
@@ -117,6 +117,9 @@
     @apply border-border outline-ring/50;
   }
   body {
+    scrollbar-gutter: stable;
+    overflow-y: scroll !important;
     @apply bg-background text-foreground;
   }
+
 }
