--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   border-color: #3E54FB !important;
 }
 
+
+@theme {
+  --breakpoint-md:850px; /* Changes 'md' to 800px (default 768px) */
+  }
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
