--- a/app/globals.css
+++ b/app/globals.css
@@ -12,15 +12,15 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
+  background: rgba(245, 247, 255, 1);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
